--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -421,6 +421,22 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y,\n",
+        "    test_size=0.2,\n",
+        "    stratify=y,          # preserves class proportions in each split\n",
+        "    random_state=SEED\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "Z7KN8rEvyGfG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "zii8qhrkInyg"
@@ -492,34 +508,6 @@
         "    print(\"#\" * 20)\n",
         "\n",
         "    return metrics"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    X, y,\n",
-        "    test_size=0.2,\n",
-        "    stratify=y,          # preserves class proportions in each split\n",
-        "    random_state=SEED\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "Z7KN8rEvyGfG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IdTMU8uEJFEl"
-      },
-      "outputs": [],
-      "source": [
-        "# ======== CONFIG ========\n",
-        "PRIMARY_SCORER = \"f1_macro\""
       ]
     },
     {
@@ -923,246 +911,101 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.datasets import make_classification\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.feature_selection import SelectKBest, f_classif\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import classification_report, accuracy_score, f1_score, recall_score, precision_score\n",
+        "\n",
+        "# Using imbalanced-learn pipeline\n",
+        "from imblearn.pipeline import Pipeline as ImbPipeline\n",
+        "from imblearn.over_sampling import BorderlineSMOTE\n",
+        "\n",
+        "# Step 1: Fit the Selector ONLY on the Training Data\n",
+        "# We use k='all' to get scores for every feature, then we'll filter manually.\n",
         "selector = SelectKBest(score_func=f_classif, k='all')\n",
-        "X_new = selector.fit_transform(X, y)"
-      ],
-      "metadata": {
-        "id": "AYii2FLGeDUO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "f_values = selector.scores_\n",
-        "p_values = selector.pvalues_"
-      ],
-      "metadata": {
-        "id": "n4UVMT4CeFMP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Create anova_df using the features from X_train and the calculated values\n",
+        "selector.fit(X_train, y_train)\n",
+        "\n",
+        "\n",
+        "# Step 2: Analyze Scores and Select Features based on a p-value\n",
+        "# Create a DataFrame to hold the feature scores for easy interpretation.\n",
         "anova_df = pd.DataFrame({\n",
-        "    'Feature': X.columns, # Use X_train.columns here\n",
-        "    'F-value': f_values,\n",
-        "    'p-value': p_values\n",
-        "})\n"
-      ],
-      "metadata": {
-        "id": "LN25wMK9eJqt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "anova_df = anova_df.sort_values('F-value', ascending=False).reset_index(drop=True)"
-      ],
-      "metadata": {
-        "id": "_VauxH5aeMwq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pd.set_option('display.float_format', lambda x: f'{x:.6f}')\n",
-        "print(anova_df)"
-      ],
-      "metadata": {
-        "id": "HxpdbINLeXCP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "topk = anova_df\n",
-        "plt.figure(figsize=(8,5))\n",
-        "sns.barplot(x=topk['F-value'], y=topk['Feature'], palette='viridis')\n",
-        "plt.title('Features by ANOVA F-test')\n",
+        "    'Feature': X_train.columns,\n",
+        "    'F-value': selector.scores_,\n",
+        "    'p-value': selector.pvalues_\n",
+        "})\n",
+        "anova_df = anova_df.sort_values('F-value', ascending=False).reset_index(drop=True)\n",
+        "\n",
+        "# Define our significance level (alpha)\n",
+        "P_VALUE_THRESHOLD = 0.1\n",
+        "selected_features = anova_df[anova_df['p-value'] < P_VALUE_THRESHOLD]['Feature'].tolist()\n",
+        "\n",
+        "print(f\"Found {len(selected_features)} features with p-value < {P_VALUE_THRESHOLD}\")\n",
+        "print(\"Selected features list:\")\n",
+        "pprint(selected_features)\n",
+        "print(\"\\nANOVA F-test Results (from training data):\")\n",
+        "display(anova_df)\n",
+        "\n",
+        "\n",
+        "# Step 3: Visualize Feature Importance\n",
+        "# This plot helps to visually confirm the ranking of features.\n",
+        "plt.figure(figsize=(10, 8))\n",
+        "sns.barplot(x=anova_df['F-value'], y=anova_df['Feature'], palette='viridis')\n",
+        "plt.title('Feature Importance based on ANOVA F-test (from Training Data)')\n",
         "plt.xlabel('F-value (Higher = More Important)')\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "yyVNlUngecWk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# สมมติ anova_df มีคอลัมน์ [\"Feature\", \"F-score\", \"p-value\"]\n",
-        "\n",
-        "# 1️⃣ เลือกเฉพาะชื่อฟีเจอร์ที่ผ่านเกณฑ์ p-value < 0.5\n",
-        "selected_features = (\n",
-        "    anova_df[anova_df[\"p-value\"] < 0.5]\n",
-        "    .sort_values(\"p-value\")[\"Feature\"]\n",
-        "    .tolist()\n",
-        ")\n",
-        "selected2 = anova_df[anova_df[\"p-value\"] < 0.5].sort_values(\"p-value\")\n",
-        "print(selected2)\n",
-        "\n",
-        "# 2️⃣ ใช้ชื่อฟีเจอร์เหล่านี้จาก X เดิม\n",
-        "X_selected = X[selected_features]\n",
-        "\n",
-        "# 3️⃣ Split dataset\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    X_selected, y, test_size=0.2, stratify=y, random_state=42\n",
-        ")\n",
-        "\n",
-        "# 4️⃣ Fit SelectKBest (optional — ถ้าต้องการเลือกเพิ่มเติม)\n",
-        "selector = SelectKBest(score_func=f_classif, k='all')\n",
-        "X_train_selected = selector.fit_transform(X_train, y_train)\n",
-        "X_test_selected = selector.transform(X_test)\n",
-        "\n",
-        "# Create a new pipeline with the same steps as the best tuned model\n",
-        "best_tuned_pipeline_template = model_tuned[best_model_name.split()[0]][\"tuned_estimators\"]\n",
-        "\n",
-        "best_model_anova = ImbPipeline(steps=best_tuned_pipeline_template.steps)\n",
-        "\n",
-        "# Set the parameters from the best tuned model\n",
-        "best_model_anova.set_params(**model_tuned[best_model_name.split()[0]][\"tune_results\"][\"best_params\"])\n",
+        "plt.ylabel('Feature')\n",
+        "plt.show()\n",
         "\n",
         "\n",
+        "# Step 4: Create New Datasets with Only Selected Features\n",
+        "# We use the 'selected_features' list to filter the columns in both train and test sets.\n",
+        "X_train_selected = X_train[selected_features]\n",
+        "X_test_selected = X_test[selected_features]\n",
+        "\n",
+        "print(\"\\nShape of data after feature selection:\")\n",
+        "print(\"X_train_selected:\", X_train_selected.shape)\n",
+        "print(\"X_test_selected:\", X_test_selected.shape)\n",
+        "print(\"-\" * 50)\n",
+        "\n",
+        "\n",
+        "# Step 5: Define and Train the ML Pipeline\n",
+        "# This is the same pipeline you defined. It will now be trained on the feature-selected data.\n",
+        "best_model_anova = ImbPipeline(steps=[\n",
+        "    (\"scale\", StandardScaler()),\n",
+        "    (\"borderline_smote\", BorderlineSMOTE(random_state=SEED)),\n",
+        "    (\"clf\", RandomForestClassifier(\n",
+        "        max_depth=30,\n",
+        "        max_features=0.7,\n",
+        "        min_samples_split=5,\n",
+        "        n_estimators=1000, # Reduced for faster execution in this example\n",
+        "        bootstrap=True,\n",
+        "        oob_score=True,\n",
+        "        criterion=\"entropy\",\n",
+        "        random_state=SEED,\n",
+        "        n_jobs=-1\n",
+        "    ))\n",
+        "])\n",
+        "\n",
+        "print(\"\\nTraining the model on selected features...\")\n",
         "best_model_anova.fit(X_train_selected, y_train)\n",
+        "print(\"Training complete.\")\n",
+        "print(\"-\" * 50)\n",
         "\n",
-        "print(best_model_anova)\n",
         "\n",
+        "# Get and display the final scores\n",
+        "test_metrics = evaluate_on_test(best_model_anova, X_test_selected, y_test)\n",
+        "scores_df = pd.DataFrame([test_metrics])\n",
         "\n",
-        "# Evaluate on the test set\n",
-        "print(\"\\nEvaluating model on test set (Before Tuning):\")\n",
-        "test_metrics_notune = evaluate_on_test(best_model_anova, X_test_selected, y_test)\n",
-        "\n",
-        "# Display test scores in a table\n",
-        "print(\"\\nSummary of Scores for Untuned Model on Test Set:\")\n",
-        "untuned_scores_df = pd.DataFrame([test_metrics_notune])\n",
-        "display(untuned_scores_df)"
+        "print(\"\\nSummary of Scores for Model on Test Set:\")\n",
+        "display(scores_df)"
       ],
       "metadata": {
-        "id": "-ms8gd8rIbKQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# สมมติ anova_df มีคอลัมน์ [\"Feature\", \"F-score\", \"p-value\"]\n",
-        "\n",
-        "# 1️⃣ เลือกเฉพาะชื่อฟีเจอร์ที่ผ่านเกณฑ์ p-value < 0.0001\n",
-        "selected_features = (\n",
-        "    anova_df[anova_df[\"p-value\"] < 0.0001]\n",
-        "    .sort_values(\"p-value\")[\"Feature\"]\n",
-        "    .tolist()\n",
-        ")\n",
-        "selected2 = anova_df[anova_df[\"p-value\"] < 0.0001].sort_values(\"p-value\")\n",
-        "print(selected2)\n",
-        "\n",
-        "# 2️⃣ ใช้ชื่อฟีเจอร์เหล่านี้จาก X เดิม\n",
-        "X_selected = X[selected_features]\n",
-        "\n",
-        "# 3️⃣ Split dataset\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    X_selected, y, test_size=0.2, stratify=y, random_state=42\n",
-        ")\n",
-        "\n",
-        "# 4️⃣ Fit SelectKBest (optional — ถ้าต้องการเลือกเพิ่มเติม)\n",
-        "selector = SelectKBest(score_func=f_classif, k='all')\n",
-        "X_train_selected = selector.fit_transform(X_train, y_train)\n",
-        "X_test_selected = selector.transform(X_test)\n",
-        "\n",
-        "\n",
-        "# Create a new pipeline with the same steps as the best tuned model\n",
-        "best_tuned_pipeline_template = model_tuned[best_model_name.split()[0]][\"tuned_estimators\"]\n",
-        "\n",
-        "best_model_anova = ImbPipeline(steps=best_tuned_pipeline_template.steps)\n",
-        "\n",
-        "# Set the parameters from the best tuned model\n",
-        "best_model_anova.set_params(**model_tuned[best_model_name.split()[0]][\"tune_results\"][\"best_params\"])\n",
-        "\n",
-        "\n",
-        "best_model_anova.fit(X_train_selected, y_train)\n",
-        "\n",
-        "print(best_model_anova)\n",
-        "\n",
-        "\n",
-        "# Evaluate on the test set\n",
-        "print(\"\\nEvaluating model on test set (Before Tuning):\")\n",
-        "test_metrics_notune = evaluate_on_test(best_model_anova, X_test_selected, y_test)\n",
-        "\n",
-        "# Display test scores in a table\n",
-        "print(\"\\nSummary of Scores for Untuned Model on Test Set:\")\n",
-        "untuned_scores_df = pd.DataFrame([test_metrics_notune])\n",
-        "display(untuned_scores_df)"
-      ],
-      "metadata": {
-        "id": "TXr2nFIiIbBR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# สมมติ anova_df มีคอลัมน์ [\"Feature\", \"F-score\", \"p-value\"]\n",
-        "\n",
-        "# 1️⃣ เลือกเฉพาะชื่อฟีเจอร์ที่ผ่านเกณฑ์ p-value < 0.000001\n",
-        "selected_features = (\n",
-        "    anova_df[anova_df[\"p-value\"] < 0.000001]\n",
-        "    .sort_values(\"p-value\")[\"Feature\"]\n",
-        "    .tolist()\n",
-        ")\n",
-        "selected = anova_df[anova_df[\"p-value\"] < 0.000001].sort_values(\"p-value\")\n",
-        "print(selected)\n",
-        "\n",
-        "# 2️⃣ ใช้ชื่อฟีเจอร์เหล่านี้จาก X เดิม\n",
-        "X_selected = X[selected_features]\n",
-        "\n",
-        "# 3️⃣ Split dataset\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    X_selected, y, test_size=0.2, stratify=y, random_state=42\n",
-        ")\n",
-        "\n",
-        "# 4️⃣ Fit SelectKBest (optional — ถ้าต้องการเลือกเพิ่มเติม)\n",
-        "selector = SelectKBest(score_func=f_classif, k='all')\n",
-        "X_train_selected = selector.fit_transform(X_train, y_train)\n",
-        "X_test_selected = selector.transform(X_test)\n",
-        "\n",
-        "# Create a new pipeline with the same steps as the best tuned model\n",
-        "best_tuned_pipeline_template = model_tuned[best_model_name.split()[0]][\"tuned_estimators\"]\n",
-        "\n",
-        "best_model_anova = ImbPipeline(steps=best_tuned_pipeline_template.steps)\n",
-        "\n",
-        "# Set the parameters from the best tuned model\n",
-        "best_model_anova.set_params(**model_tuned[best_model_name.split()[0]][\"tune_results\"][\"best_params\"])\n",
-        "\n",
-        "\n",
-        "best_model_anova.fit(X_train_selected, y_train)\n",
-        "\n",
-        "print(best_model_anova)\n",
-        "\n",
-        "# Evaluate on the test set\n",
-        "print(\"\\nEvaluating model on test set (with Feature Selection):\")\n",
-        "test_metrics_best_model_anova = evaluate_on_test(best_model_anova, X_test_selected, y_test)\n",
-        "\n",
-        "# Display test scores in a table\n",
-        "print(\"\\nSummary of Scores for Best Tuned Model (with Feature Selection) on Test Set:\")\n",
-        "best_model_anova_scores_df = pd.DataFrame([test_metrics_best_model_anova])\n",
-        "display(best_model_anova_scores_df)"
-      ],
-      "metadata": {
-        "id": "CauuqNbHIoOO"
+        "id": "NkJcFuB4iuE0"
       },
       "execution_count": null,
       "outputs": []
