--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -974,22 +974,13 @@
         "\n",
         "\n",
         "# Step 5: Define and Train the ML Pipeline\n",
-        "# This is the same pipeline you defined. It will now be trained on the feature-selected data.\n",
-        "best_model_anova = ImbPipeline(steps=[\n",
-        "    (\"scale\", StandardScaler()),\n",
-        "    (\"borderline_smote\", BorderlineSMOTE(random_state=SEED)),\n",
-        "    (\"clf\", RandomForestClassifier(\n",
-        "        max_depth=30,\n",
-        "        max_features=0.7,\n",
-        "        min_samples_split=5,\n",
-        "        n_estimators=1000, # Reduced for faster execution in this example\n",
-        "        bootstrap=True,\n",
-        "        oob_score=True,\n",
-        "        criterion=\"entropy\",\n",
-        "        random_state=SEED,\n",
-        "        n_jobs=-1\n",
-        "    ))\n",
-        "])\n",
+        "# Create a new pipeline with the same steps as the best tuned model\n",
+        "best_tuned_pipeline_template = model_tuned[best_model_name.split()[0]][\"tuned_estimators\"]\n",
+        "\n",
+        "best_model_anova = ImbPipeline(steps=best_tuned_pipeline_template.steps)\n",
+        "\n",
+        "# Set the parameters from the best tuned model\n",
+        "best_model_anova.set_params(**model_tuned[best_model_name.split()[0]][\"tune_results\"][\"best_params\"])\n",
         "\n",
         "print(\"\\nTraining the model on selected features...\")\n",
         "best_model_anova.fit(X_train_selected, y_train)\n",
