--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -569,7 +569,7 @@
         "    X_train,\n",
         "    y_train,\n",
         "    cv=cv,\n",
-        "    scoring=PRIMARY_SCORER,\n",
+        "    scoring=\"f1_macro\",\n",
         "    n_jobs=-1,\n",
         "    return_estimator=True,\n",
         "    error_score=np.nan,\n",
@@ -754,7 +754,7 @@
         "    search = HalvingRandomSearchCV(\n",
         "        estimator=est,\n",
         "        param_distributions=grid,\n",
-        "        scoring=PRIMARY_SCORER,\n",
+        "        scoring=\"f1_macro\",\n",
         "        cv=cv,\n",
         "        n_jobs=-1,\n",
         "        error_score=np.nan,   # don't bomb entire run on a single bad fold\n",
