--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -532,7 +532,7 @@
       "source": [
         "from sklearn.model_selection import RepeatedStratifiedKFold\n",
         "\n",
-        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=1, random_state=SEED)"
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=5, random_state=SEED)"
       ]
     },
     {
@@ -941,7 +941,7 @@
         "anova_df = anova_df.sort_values('F-value', ascending=False).reset_index(drop=True)\n",
         "\n",
         "# Define our significance level (alpha)\n",
-        "P_VALUE_THRESHOLD = 0.1\n",
+        "P_VALUE_THRESHOLD = 0.00000001\n",
         "selected_features = anova_df[anova_df['p-value'] < P_VALUE_THRESHOLD]['Feature'].tolist()\n",
         "\n",
         "print(f\"Found {len(selected_features)} features with p-value < {P_VALUE_THRESHOLD}\")\n",
