สร้างโดยใช้ Colab

--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -437,25 +437,53 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import fnmatch\n",
+        "from typing import Dict, Any, Optional # More compatible type hinting\n",
+        "\n",
+        "def grid_for(model_name: str, grid_map: Dict[str, Any]) -> Optional[Dict[str, Any]]:\n",
+        "    \"\"\"\n",
+        "    Finds the matching grid for a model name.\n",
+        "\n",
+        "    The matching logic proceeds in two stages:\n",
+        "    1.  **Exact Match:** Checks if model_name is a key directly in grid_map.\n",
+        "    2.  **Wildcard Match:** If no exact match, iterates through grid_map keys,\n",
+        "        normalizes them (e.g., \"RF_*\" -> \"RF*\"), and checks for a\n",
+        "        fnmatch-style wildcard match.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # 1. Try for a direct, exact match first. This is fast and specific.\n",
+        "    if model_name in grid_map:\n",
+        "        print(f\"=> Found exact match for: {model_name}\")\n",
+        "        return grid_map[model_name]\n",
+        "\n",
+        "    # 2. If no exact match, iterate and check for wildcard patterns.\n",
+        "    for pattern, grid in grid_map.items():\n",
+        "        # Apply the specific normalization from the original code\n",
+        "        normalized_pattern = pattern.replace(\"_*\", \"*\")\n",
+        "\n",
+        "        if fnmatch.fnmatchcase(model_name, normalized_pattern):\n",
+        "            print(f\"=> Found wildcard match '{normalized_pattern}' for: {model_name}\")\n",
+        "            return grid\n",
+        "\n",
+        "    # 3. If no match is found after all checks, return None.\n",
+        "    print(f\"=> No grid found for: {model_name}\")\n",
+        "    return None"
+      ],
+      "metadata": {
+        "id": "nVaaEqhs8Oo2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "zii8qhrkInyg"
       },
       "outputs": [],
       "source": [
-        "def grid_for(model_name: str, grid_map: dict) -> dict | None:\n",
-        "    # allow both exact and wildcard matches; also fix \"LogReg_*\" -> \"LogReg*\"\n",
-        "    grid_map = {k.replace(\"_*\", \"*\"): v for k, v in grid_map.items()}\n",
-        "    if model_name in grid_map:\n",
-        "        print(f\"=> return grid {grid_map[model_name]}\")\n",
-        "        return grid_map[model_name]\n",
-        "    for pattern, grid in grid_map.items():\n",
-        "        if fnmatchcase(model_name, pattern):\n",
-        "            print(f\"=> return grid {grid}\")\n",
-        "            return grid\n",
-        "    print(f\"=> no grid found for {model_name}\")\n",
-        "    return None\n",
-        "\n",
         "def evaluate_on_test(est, X_test = X_test, y_test = y_test):\n",
         "    \"\"\"Return dict of test metrics and show confusion matrices.\"\"\"\n",
         "\n",
